primitives/runtime-interface/proc-macro/tests/ui/no_generic_parameters.stderr
error: Generic parameters not supported.
 --> $DIR/no_generic_parameters.rs:5:10
  |
5 |     fn test<R>() {}
  |             ^

error: Generic parameters not supported.
 --> $DIR/no_generic_parameters.rs:4:12
  |
4 | trait Test<T> {
  |            ^
